WorkerInfo enhancements
